--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.19.1",
     "firebase": "^10.9.0",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "path": "^0.12.7",
     "uuidv4": "^6.2.13"
   }
 }
